--- a/memorybook/src/styles/Header.css
+++ b/memorybook/src/styles/Header.css
@@ -5,9 +5,9 @@
 
     padding: 0px 60px;
 
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 
-    background-color: #181818;
+    background-color: #181818a7;
     color: white;
 }
 
