--- a/memorybook/src/styles/Latest.css
+++ b/memorybook/src/styles/Latest.css
@@ -2,8 +2,9 @@
 
     color: white;
     background-color: #181818a7;
+    font-size: 30px;
 
-    padding: 50px 150px;
+    padding: 50px 100px;
     margin: 0px 70px;
     border-radius: 25px;
     text-align: center;
@@ -44,6 +45,9 @@
     padding: 10px;
     bottom: 20px;
     left: 10px;
+
+    font-size: 30px;
+    text-shadow: rgb(0, 0, 0) 5px 0 10px;
     /*background-color: #181818;
     border-radius: 15px;*/
 }
@@ -54,6 +58,9 @@
     padding: 10px;
     bottom: 0px;
     left: 10px;
+
+    font-size: 20px;
+    text-shadow: rgb(0, 0, 0) 5px 0 10px;
     /*background-color: #181818;
     border-radius: 15px;*/
 }
@@ -61,6 +68,12 @@
 .Latest-Items-List-Item{
     width: 800px;
     height: 500px;
+}
+
+.Latest-Items-List-Item:hover{
+    box-shadow:inset 0 0 0 2000px rgb(26, 26, 26);
+    -webkit-backdrop-filter: blur(5px); /* Use for Safari 9+, Edge 17+ (not a mistake) and iOS Safari 9.2+ */
+    backdrop-filter: blur(5px); /* Supported in Chrome 76 */
 }
 
 .Latest-Items-List-Item img{
@@ -80,18 +93,22 @@
 }
 
 .Latest-Item-Previous{
+    color: #ffffffd9;
     font-size: 100px;
 }
 
 .Latest-Item-Next {
+    color: #ffffffd9;
     font-size: 100px;
 }
 
 .Latest-Item-Previous :hover{
+    color: #ffffff3e;
     cursor: pointer;
 }
 
 .Latest-Item-Next :hover{
+    color: #ffffff3e;
     cursor: pointer;
 }
 
