--- a/memorybook/src/styles/Login.css
+++ b/memorybook/src/styles/Login.css
@@ -1,29 +1,23 @@
 .Login{
-
     color: white;
     background-color: #181818a7;
     font-size: 30px;
 
-    height: 740px;
+    height: 580px;
 
     padding: 50px 100px;
-    margin: 0px 70px;
+    margin: 0px 470px;
     border-radius: 25px;
     text-align: center;
 }
 
 
 #Login-Form-Email, #Login-Form-Username, #Login-Form-Password{
-  width: 300%;
+  width: 100%;
 }
 
 #Login-Form{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-
     padding: 40px;
     line-height: 40px;
-    text-align: left;
+    text-align: center;
 }
