No Memories Interaction
Page notifies when there isn't any memories to show.

--- a/memorybook/src/styles/Latest.css
+++ b/memorybook/src/styles/Latest.css
@@ -4,6 +4,8 @@
     background-color: #181818a7;
     font-size: 30px;
 
+    height: 740px;
+
     padding: 50px 100px;
     margin: 0px 70px;
     border-radius: 25px;
