--- a/memorybook/src/styles/Memories.css
+++ b/memorybook/src/styles/Memories.css
@@ -3,6 +3,8 @@
     color: white;
     background-color: #181818a7;
     font-size: 30px;
+    
+    height: 740px;
 
     padding: 50px 100px;
     margin: 0px 70px;
