--- a/memorybook/src/styles/Register.css
+++ b/memorybook/src/styles/Register.css
@@ -14,7 +14,7 @@
 
 
 #Register-Form-Email, #Register-Form-Username, #Register-Form-Password, #Register-Form-Repeat-Password, #Register-Form-ImageURL{
-  width: 300%;
+  width: 510px;
 }
 
 #Register-Form{
