--- a/memorybook/src/styles/Share.css
+++ b/memorybook/src/styles/Share.css
@@ -14,7 +14,7 @@
 
 
 #Share-Form-Title, #Share-Form-Description, #Share-Form-ImageURL{
-  width: 300%;
+  width: 510px;
 }
 
 #Share-Form-Description{
