--- a/memorybook/src/styles/Memories.css
+++ b/memorybook/src/styles/Memories.css
@@ -3,46 +3,27 @@
     color: white;
     background-color: #181818a7;
     font-size: 30px;
-    
-    height: 740px;
 
     padding: 50px 100px;
-    margin: 0px 70px;
+    margin: 0px 250px;
     border-radius: 25px;
     text-align: center;
 }
 
-.Memories-Slider{
+.Memories article{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
+}
 
-    margin-top: 50px;
-
-    position: relative;
+.Memories article a{
+    margin: 10px;
 }
 
 .Memories-Items{
     margin: 50px 0px;
 }
-
-.Memories-Items-List{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-
-    list-style: none;
-}
-
-.Memories-Items-List-Item{
-    position: relative;
-    margin-right: 2.5%;
-    width: 800px;
-    height: 500px;
-    text-align: left;
-}
-
 .Memories-Items-List-Item-Title{
     position: absolute;
     text-align: left;
@@ -81,33 +62,5 @@
     border: white 10px solid;
     width: 100%;
     height: 100%;
-}
-
-.slide{
-    display: none;
-}
-
-.active{
-    display: block;
-}
-
-.Memories-Item-Previous{
-    color: #ffffffd9;
-    font-size: 100px;
-}
-
-.Memories-Item-Next {
-    color: #ffffffd9;
-    font-size: 100px;
-}
-
-.Memories-Item-Previous :hover{
-    color: #ffffff3e;
-    cursor: pointer;
-}
-
-.Memories-Item-Next :hover{
-    color: #ffffff3e;
-    cursor: pointer;
 }
 
