--- a/memorybook/src/styles/Home.css
+++ b/memorybook/src/styles/Home.css
@@ -1,4 +1,4 @@
-.Latest{
+.Home{
 
     color: white;
     background-color: #181818a7;
@@ -12,7 +12,19 @@
     text-align: center;
 }
 
-.Latest-Slider{
+.Home-Welcome{
+
+    color: white;
+    background-color: #181818a7;
+    font-size: 30px;
+
+    padding: 50px 100px;
+    margin: 0px 250px 25px 250px;
+    border-radius: 25px;
+    text-align: center;
+}
+
+.Home-Slider{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,11 +34,11 @@
     position: relative;
 }
 
-.Latest-Items{
+.Home-Items{
     margin: 50px 0px;
 }
 
-.Latest-Items-List{
+.Home-Items-List{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -35,7 +47,7 @@
     list-style: none;
 }
 
-.Latest-Items-List-Item{
+.Home-Items-List-Item{
     position: relative;
     margin-right: 2.5%;
     width: 800px;
@@ -43,7 +55,7 @@
     text-align: left;
 }
 
-.Latest-Items-List-Item-Title{
+.Home-Items-List-Item-Title{
     position: absolute;
     text-align: left;
     padding: 10px;
@@ -56,7 +68,7 @@
     border-radius: 15px;*/
 }
 
-.Latest-Items-List-Item-Date{
+.Home-Items-List-Item-Date{
     position: absolute;
     text-align: left;
     padding: 10px;
@@ -69,13 +81,13 @@
     border-radius: 15px;*/
 }
 
-.Latest-Items-List-Item:hover{
+.Home-Items-List-Item:hover{
     box-shadow:inset 0 0 0 2000px rgb(26, 26, 26);
     -webkit-backdrop-filter: blur(5px); /* Use for Safari 9+, Edge 17+ (not a mistake) and iOS Safari 9.2+ */
     backdrop-filter: blur(5px); /* Supported in Chrome 76 */
 }
 
-.Latest-Items-List-Item img{
+.Home-Items-List-Item img{
     object-fit: cover;
     overflow: hidden;
     border: white 10px solid;
@@ -91,22 +103,22 @@
     display: block;
 }
 
-.Latest-Item-Previous{
+.Home-Item-Previous{
     color: #ffffffd9;
     font-size: 100px;
 }
 
-.Latest-Item-Next {
+.Home-Item-Next {
     color: #ffffffd9;
     font-size: 100px;
 }
 
-.Latest-Item-Previous :hover{
+.Home-Item-Previous :hover{
     color: #ffffff3e;
     cursor: pointer;
 }
 
-.Latest-Item-Next :hover{
+.Home-Item-Next :hover{
     color: #ffffff3e;
     cursor: pointer;
 }
