--- a/memorybook/src/App.css
+++ b/memorybook/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Montserrat&family=Poppins&family=Raleway:wght@200;400&display=swap');
+
+html{
+  font-family: 'Baloo Bhaijaan 2', cursive;
+}
 body{
 	margin: 0;
   
