--- a/memorybook/src/components/Details/Details.css
+++ b/memorybook/src/components/Details/Details.css
@@ -63,7 +63,7 @@
     justify-content: space-between;
     align-items: center;
 
-    
+
     color: white;
     background-color: #181818a7;
     font-size: 30px;
@@ -81,6 +81,10 @@
     font-size: 24px;
     width: 25%;
     height: 45px;
+}
+
+.Memory-Interactions Link{
+    text-decoration: none;
 }
 
 .Memory-Interactions button:hover{
