--- a/memorybook/src/components/Memories/Memories.css
+++ b/memorybook/src/components/Memories/Memories.css
@@ -5,7 +5,7 @@
     font-size: 30px;
 
     padding: 50px 100px;
-    margin: 0px 250px;
+    margin: 0px 315px;
     border-radius: 25px;
     text-align: center;
 }
@@ -14,7 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
 }
 
