--- a/memorybook/src/components/Profile/Profile.css
+++ b/memorybook/src/components/Profile/Profile.css
@@ -29,10 +29,19 @@
     border: white 10px solid;
 }
 .Profile-Information h2{
-    margin-top: -15px;
+    margin-top: -30px;
 
     text-align: left;
     font-size: 25px;
+}
+
+.Profile-Information h3{
+    margin-top: -15px;
+
+    color: rgb(160, 160, 160);
+
+    text-align: left;
+    font-size: 20px;
 }
 
 .Profile-Memories{
